[project]
name = "dm-surface-server"
version = "0.1.0"
description = "FastAPI backend for DM projection surface"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
